--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
       <p>選一件事，讓熊熊陪你一起專心完成。</p>
     </header>
 
-    <!-- 🐻 熊熊區塊（圖片版） -->
+    <!-- 🐻 熊熊區塊 -->
     <section class="bear-panel">
       <div class="bear-visual mode-idle" id="bearVisual">
-        <img id="bearImage" src="images/bear_idle.png" alt="成長熊" />
+        <!-- 這個 src 只是預設，真正載入時會被 script.js 覆蓋成閒置熊三選一 -->
+        <img id="bearImage" src="images/bear_idle1.png" alt="成長熊" />
       </div>
       <div class="bear-bubble" id="bearBubble">
-        🐻 嗨，我是成長熊。今天想一起做什麼呢？
+        🐻 我們今天要一起做什麼呢？
       </div>
     </section>
 
