--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
           </div>
           <span id="skillValue" class="stat-value">0 分鐘</span>
         </div>
+
+        <div class="stat-row">
+          <span>休息 😴</span>
+          <div class="stat-bar">
+            <div id="sleepBar" class="stat-fill"></div>
+          </div>
+          <span id="sleepValue" class="stat-value">0 分鐘</span>
+        </div>
       </section>
 
       <!-- ⏳ 任務／定時 -->
@@ -151,7 +159,7 @@
       <div class="completion-bear">🐻✨</div>
       <h3 id="completionTitle">太棒了！</h3>
       <p id="completionText">
-        你完成了一段時間的練習，今天的你又升級了一點點！
+        你完成了一段專注時間，今天的你又升級了一點點！
       </p>
       <p id="completionStarsText" class="completion-stars-text">
         本次專注「<span id="completionActivityLabel">看書</span>」
